--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -8,8 +8,13 @@ parameters:
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
+    mailer_port:       ~
+    mailer_encryption: ~
     mailer_user:       ~
     mailer_password:   ~
+
+    fos_user_mailer_sendername: 'AFH Computer Repair - Computer Status'
+    fos_user_mailer_fromaddress: no-reply@afhcomputerrepair.com
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
