--- a/src/BConway/WebsiteBundle/Resources/config/doctrine/PrivateNote.orm.yml
+++ b/src/BConway/WebsiteBundle/Resources/config/doctrine/PrivateNote.orm.yml
@@ -22,4 +22,6 @@ BConway\WebsiteBundle\Entity\PrivateNote:
             joinColumn:
                 name: job_id
                 referencedColumnName: id
-    lifecycleCallbacks: {  }
+    lifecycleCallbacks:
+        prePersist: [ setNoteTime ]
+        preUpdate: [ setNoteTime ]
