--- a/src/BConway/WebsiteBundle/Resources/config/doctrine/StatusEntry.orm.yml
+++ b/src/BConway/WebsiteBundle/Resources/config/doctrine/StatusEntry.orm.yml
@@ -24,4 +24,6 @@ BConway\WebsiteBundle\Entity\StatusEntry:
             joinColumn:
                 name: job_id
                 referencedColumnName: id
-    lifecycleCallbacks: {  }
+    lifecycleCallbacks:
+        prePersist: [ setEntryTime ]
+        preUpdate: [ setEntryTime ]
