Re-generated CRUD based on new schema

--- a/src/BConway/WebsiteBundle/Resources/config/doctrine/Job.orm.yml
+++ b/src/BConway/WebsiteBundle/Resources/config/doctrine/Job.orm.yml
@@ -89,7 +89,8 @@ BConway\WebsiteBundle\Entity\Job:
             type: date
             column: job_promise_date
         jobCreatedBy:
-            type: integer
+            type: string
+            length: 255
             column: job_created_by
         computerSpecDustingNeeded:
             type: boolean
