--- a/src/BConway/WebsiteBundle/Resources/config/routing/privatenote.yml
+++ b/src/BConway/WebsiteBundle/Resources/config/routing/privatenote.yml
@@ -3,7 +3,7 @@ private-note:
     defaults: { _controller: "BConwayWebsiteBundle:PrivateNote:index" }
 
 private-note_show:
-    pattern:  /{id}
+    pattern:  /{id}/show
     defaults: { _controller: "BConwayWebsiteBundle:PrivateNote:show" }
 
 private-note_new:
