--- a/src/BConway/WebsiteBundle/Resources/config/routing.yml
+++ b/src/BConway/WebsiteBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 b_conway_website_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: BConwayWebsiteBundle:Default:index }
+    pattern:  /
+    defaults: { _controller: BConwayWebsiteBundle:Job:index }
 
 BConwayWebsiteBundle_job:
     resource: "@BConwayWebsiteBundle/Resources/config/routing/job.yml"
